# gradescope-ics

./: .gitignore  Cargo.toml
src/: config.rs  ical.rs  main.rs  server.rs
src/gradescope/: course.rs  home.rs  mod.rs
